Missing enpoints added
